Restructure and add View

--- a/Week_1/01/webapp/index.html
+++ b/Week_1/01/webapp/index.html
@@ -10,18 +10,22 @@
 			data-sap-ui-theme="sap_bluecrystal"
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-compatVersion="edge"
-			data-sap-ui-preload="async">
+			data-sap-ui-preload="async"
+			data-sap-ui-resourceroots='{
+			"opensap.myapp": "./"
+		}'>
 		</script>
 
 
 		<script>
 			sap.ui.getCore().attachInit(function () {
-				alert("SAPUI5 is ready");
+			sap.ui.xmlview({
+				viewName: "opensap.myapp.view.App"
+			}).placeAt("content");
 			});
 		</script>
 
 	</head>
 	 <body class="sapUiBody" id="content">
-		<p>Hello World</p>
 	</body>
 </html>
